--- a/RestaurantPMS/wwwroot/css/site.css
+++ b/RestaurantPMS/wwwroot/css/site.css
@@ -502,3 +502,8 @@ body {
     font-size: .8rem;
     font-weight: 700;
 }
+.gbFondo {
+    background-color: #681cbe;
+    background-image: linear-gradient(180deg, #212529 10%, #224abe 100%);
+    background-size: cover;
+}
